<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/common_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/action_settings_rs"
                android:background="@color/read_theme_white"
                style="@style/app_setting_content_btn"
                android:layout_marginTop="10dp"
                android:text="@string/settings_rd" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/read_theme_white"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/action_settings_flip"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/app_setting_content_btn"
                    android:drawableRight="@color/trans"
                    android:text="翻页方式" />

                <TextView
                    android:id="@+id/action_settings_flip_text"
                    android:drawableRight="@color/trans"
                    android:layout_width="wrap_content"
                    style="@style/app_setting_content_btn"
                    android:textColor="@color/read_theme_gray"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/action_settings_ts"
                style="@style/app_setting_content_btn"
                android:background="@color/read_theme_white"
                android:text="@string/settings_te" />

            <TextView
                android:id="@+id/action_settings_sm"
                android:layout_marginTop="10dp"
                style="@style/app_setting_content_btn"
                android:background="@color/read_theme_white"
                android:text="@string/settings_sm" />




            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/read_theme_white"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/action_settings_crc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/app_setting_content_btn"
                    android:drawableRight="@color/trans"
                    android:text="@string/settings_crc" />

                <TextView
                    android:id="@+id/action_settings_crc_text"
                    android:drawableRight="@color/trans"
                    android:layout_width="wrap_content"
                    style="@style/app_setting_content_btn"
                    android:textColor="@color/read_theme_gray"
                    />

            </LinearLayout>



            <TextView
                android:id="@+id/action_settings_ctc"
                style="@style/app_setting_content_btn"
                android:background="@color/read_theme_white"
                android:text="@string/settings_ctc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/read_theme_white"
                android:orientation="horizontal"
                >
            <TextView
                android:id="@+id/action_settings_dn"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:gravity="left|center"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/primary_text"
                android:text="@string/settings_dn" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/action_settings_uf"
                android:layout_marginTop="10dp"
                style="@style/app_setting_content_btn"
                android:background="@color/read_theme_white"
                android:text="@string/settings_cf" />


            <TextView
                android:id="@+id/action_settings_sp"
                style="@style/app_setting_content_btn"
                android:background="@color/read_theme_white"
                android:text="@string/settings_sp" />

            <TextView
                android:id="@+id/action_settings_vu"
                style="@style/app_setting_content_btn"
                android:background="@color/read_theme_white"
                android:text="@string/settings_vu" />

            <TextView
                android:id="@+id/action_settings_hc"
                style="@style/app_setting_content_btn"
                android:background="@color/read_theme_white"
                android:text="@string/settings_hc" />

            <TextView
                android:id="@+id/action_settings_as"
                style="@style/app_setting_content_btn"
                android:background="@color/read_theme_white"
                android:layout_marginBottom="30dp"
                android:text="@string/settings_as" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>